# special-agent-ops

./: .dockerignore  .env.example  .gitignore  Dockerfile.gateway  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/commands/: create-team.md
.cursor/commands/: create-team.md
.github/workflows/: ci.yml
examples/: README.md
examples/agents/: demo.yaml  gitea-mcp.yaml  lmstudio.yaml  researcher.yaml  with-mcp.yaml  workspace-fs.yaml
frontend/: README.md  biome.json  package-lock.json  package.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Card.tsx  Column.tsx
frontend/src/pages/: Agents.tsx  Board.tsx  Chat.tsx  Projects.tsx
schemas/: agent-manifest-v1.schema.json
scripts/: e2e.sh
src/agent_gateway/: __init__.py  db.py  main.py  settings.py
src/agent_gateway/api/: routes_agents.py  routes_board.py  routes_health.py  routes_invoke.py  routes_projects.py  schemas.py
src/agent_gateway/models/: __init__.py  orm.py
src/agent_gateway/services/: agent_runner.py  bus.py
src/agentctl/: __init__.py
src/agentctl/cli/: __init__.py  app.py  apply.py  deploy.py  doctor.py
src/agentctl/codegen/: __init__.py  context.py  registry.py  writer.py
src/agentctl/codegen/mcp_agent/: __init__.py  generator.py
src/agentctl/deploy/: __init__.py  templates.py
src/agentctl/manifest/: __init__.py  io.py  v1.py
src/agentctl/redis_bus/: __init__.py  client.py
tests/: test_codegen_snapshots.py  test_gateway_api.py  test_manifest_parse.py  test_redis_bus.py
(+17 files in other folders)
